Fix responsive megaphone

--- a/app/styles/home-page.scss
+++ b/app/styles/home-page.scss
@@ -264,7 +264,7 @@
 
         @include breakpoint(baby-bear) {
           margin: 0;
-          font-size: 5rem;
+          font-size: 4rem;
         }
       }
 
@@ -394,9 +394,9 @@
   img {
     height: 240px;
     margin: 24px 0 0 16px;
-  }
-  @include breakpoint(baby-bear){
-    display: none;
+    @include breakpoint(baby-bear){
+      display: none;
+    }
   }
 }
 
@@ -451,6 +451,10 @@
   display: flex;
   flex-flow: row wrap;
   align-items: center;
+
+  @include breakpoint(baby-bear){
+    text-align: center;
+  }
 }
 
 .home-page-megaphone-text h3 {
@@ -459,6 +463,10 @@
   flex: 0;
   text-transform: uppercase;
   color: get-color(gray5);
+
+  @include breakpoint(baby-bear){
+    flex: 1;
+  }
 
   p {
     font-size: 54px;
@@ -481,6 +489,12 @@
   justify-content: space-between;
   align-items: flex-end;
   font-size: 24px;
+
+
+    @include breakpoint(baby-bear){
+      text-align: center;
+      display: block;
+    }
 
   .u-button {
     margin-bottom: 0;
